@@ -71,3 +71,7 @@ dependencies {
     integrationTestImplementation project(':libs:rest:ssl-cert-read-impl')
     integrationTestImplementation project(":testing:test-utilities")
 }
+
+tasks.withType(Test).configureEach {
+    jvmArgs '--add-opens', 'java.base/java.net=ALL-UNNAMED'
+}
